kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-net-app
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: kube-net-app
  template:
    metadata:
      labels:
        app: kube-net-app
    spec:
      containers:
      - name: kube-net-app
        image: nginx:1.29.3
        lifecycle:
          preStop:
            exec:
              command: ["rm", "/homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 5
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: workdir
          mountPath: "/homework"
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: workdir
        emptyDir: {}
      - name: nginx-config-volume
        configMap:
          name: nginx-conf-configmap
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: homework
                operator: In
                values:
                - "true"
